lang/tests/contract/common/ui/fail/03-multiple-constructors.rs
use liquid_lang as liquid;

#[liquid::contract]
mod noop {
    #[liquid(storage)]
    struct Noop {}

    #[liquid(methods)]
    impl Noop {
        pub fn new(&mut self) {}

        pub fn new(&mut self) {}
    }
}

fn main() {}
